--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,4 +10,5 @@ services:
       - .env
     volumes:
       - .:/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     restart: unless-stopped
